# fairswarm-library

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
experiments/: __init__.py  generate_figures.py  parallel_runner.py  run_ablation.py  run_approximation.py  run_convergence.py  run_fairness.py  run_fairness_scaling.py  run_mimic_fl.py  run_pareto.py  run_privacy.py  run_real_fl.py  run_sota_comparison.py  statistics_utils.py  validate_convergence_rate.py
experiments/analysis/: __init__.py  plots.py
experiments/baselines/: __init__.py  fair_dpfl_scs.py  fairfed.py  fedavg.py  fedprox.py  greedy.py  greedy_selection.py  grey_wolf_optimizer.py  qffl.py  random_selection.py  selection_baselines.py  standard_pso.py
experiments/config/: experiment_configs.yaml
experiments/stress_tests/: __init__.py  run_all.py  test_adaptive_privacy.py  test_fairness_aggregation.py  test_noniid_detection.py
experiments/tests/: test_fl_edge_cases.py  test_parameter_boundaries.py
notebooks/: quickstart.ipynb
references/: REFERENCE_INDEX.md  references.bib
results/ablation/: ablation_results_20260214_182309.json
results/real_fl/: real_fl_results_20260214_205442.json  real_fl_results_20260216_135907.json
src/fairswarm/: __init__.py  __version__.py  types.py
src/fairswarm/algorithms/: __init__.py  fairswarm.py  fairswarm_dp.py  result.py  sklearn_compat.py
src/fairswarm/constraints/: __init__.py  base.py  cardinality.py  fairness.py  privacy.py
src/fairswarm/core/: __init__.py  client.py  config.py  numerical.py  particle.py  position.py  swarm.py
src/fairswarm/demographics/: __init__.py  distribution.py  divergence.py  targets.py
src/fairswarm/digital_twin/: __init__.py  adapter.py  drift.py  simulator.py  twin.py
src/fairswarm/fitness/: __init__.py  base.py  composite.py  equity.py  fairness.py  mock.py
src/fairswarm/incentives/: __init__.py  allocation.py  shapley.py
src/fairswarm/integrations/: __init__.py  flower.py
src/fairswarm/privacy/: __init__.py  accountant.py  mechanisms.py
tests/: __init__.py  conftest.py  test_approximation.py  test_constraints.py  test_convergence.py  test_core.py  test_demographics.py  test_digital_twin.py  test_edge_cases.py  test_fairness_bound.py  test_fairswarm.py  test_fairswarm_dp.py  test_fitness.py  test_incentives.py  test_integrations.py  test_privacy.py  test_privacy_tradeoff.py
