[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fairswarm"
dynamic = ["version"]
description = "Provably fair particle swarm optimization for federated learning coalition selection"
readme = "README.md"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.9"
authors = [
    { name = "Tenicka Norwood", email = "tenicka.norwood@gmail.com" },
]
keywords = [
    "federated-learning",
    "particle-swarm-optimization",
    "fairness",
    "healthcare",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "typing_extensions>=4.0.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.82.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
]
flower = [
    "flwr>=1.5.0",
]
full = [
    "fairswarm[dev,flower]",
]

[project.urls]
Homepage = "https://github.com/dataeducator/fairswarm-library"
Documentation = "https://github.com/dataeducator/fairswarm-library#readme"
Issues = "https://github.com/dataeducator/fairswarm-library/issues"
Source = "https://github.com/dataeducator/fairswarm-library"

[tool.hatch.version]
path = "src/fairswarm/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fairswarm"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "theorem1: tests for Theorem 1 (Convergence)",
    "theorem2: tests for Theorem 2 (ε-Fairness)",
    "theorem3: tests for Theorem 3 (Approximation)",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E402",  # module-level import not at top (needed for sys.path in experiments)
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["fairswarm"]

[tool.bandit]
exclude_dirs = ["tests", "experiments"]
skips = ["B101", "B311"]
# B101: assert used (fine in non-production code)
# B311: random used (acceptable for PSO stochastic optimization)

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/conftest.py"]

[tool.coverage.run]
source = ["fairswarm"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
